syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message AverageRequest{
  int32 input_number = 1;
}

message AverageResponse{
  double result = 1;
}