syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message MaxRequest{
  int32 input_number = 1;
}

message MaxResponse{
  int32 result = 1;
}